# invairiant

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  action.yml  pyproject.toml
.cursor/rules/: invairiant.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: publish.yml  validate.yml
.invairiant/history/: README.md  finding-registry.jsonl  lens-score-history.csv  rejected-hypotheses.jsonl
case-studies/: README.md
case-studies/low-latency-runtime/: README.md  ai-reviewer-miss.md  diff.patch  invairiant.config.yml  rejected-hypotheses.md  report.json  report.md
case-studies/persistent-mesh-transport/: README.md  ai-reviewer-miss.md  diff.patch  invairiant.config.yml  rejected-hypotheses.md  report.json  report.md
case-studies/social-autopost/: README.md  ai-reviewer-miss.md  diff.patch  invairiant.config.yml  rejected-hypotheses.md  report.json  report.md
cli/: README.md  invairiant.py
docs/: audit-workflow.md  cli.md  demo.md  evidence-rules.md  github-action.md  lens-taxonomy.md  methodology.md  publishing.md  related-work.md  severity-model.md
examples/ai-agent-system/: invairiant.config.yml
examples/infra-service/: example-audit.md  example-findings.json  example-report.json  invairiant.config.yml
invairiant/: __init__.py  cli.py  evidence.py  models.py  schemas.py  scopes.py
lenses/: README.md
prompts/: evidence-verifier.md  lens-auditor.md  report-synthesizer.md  severity-classifier.md
schemas/: audit-report.schema.json  evidence-bundle.schema.json  finding.schema.json  invairiant.config.schema.json  lens.schema.json
scripts/: validate_framework.py
skill/: README.md  SKILL.md
templates/: audit-report.md  event-triggered-audit.md  finding.md  phase-transition-audit.md  pr-comment.md
tests/: test_cli_e2e.py  test_hardening.py  test_helpers.py  test_scope.py
(+32 files in other folders)
